chore: arrange imports

--- a/src/components/project/Project.astro
+++ b/src/components/project/Project.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectTool from "./ProjectTool.astro"
-import ProjectLink from "./ProjectLink.astro"
 import ProjectImage from "./ProjectImage.astro"
-import ProjectInfo from "./ProjectInfo.astro";
+import ProjectInfo from "./ProjectInfo.astro"
+import ProjectLink from "./ProjectLink.astro"
+import ProjectTool from "./ProjectTool.astro"
 
 const { lazy = true, img_file_name, label, title, description, tools, url, url_text, github_url } = Astro.props
 ---
