--- a/src/components/LinkBar.astro
+++ b/src/components/LinkBar.astro
@@ -8,19 +8,49 @@ import TwitchIcon from "./icons/TwitchIcon.astro"
 
 <div class="flex justify-center align-center">
   <div class="link-bar flex justify-center py-3">
-    <a href="https://www.linkedin.com/in/ricafolio/" target="_blank" class="link-button mr-2" rel="noopener noreferrer" data-tooltip-text="LinkedIn">
+    <a 
+      href="https://www.linkedin.com/in/ricafolio/" 
+      target="_blank" 
+      class="link-button mr-2" 
+      rel="noopener noreferrer"
+      data-tooltip-text="LinkedIn"
+    >
       <LinkedInIcon />
     </a>
-    <a href="https://github.com/ricafolio" target="_blank" class="link-button mr-2" rel="noopener noreferrer" data-tooltip-text="Github">
+    <a 
+      href="https://github.com/ricafolio" 
+      target="_blank" 
+      class="link-button mr-2" 
+      rel="noopener noreferrer"
+      data-tooltip-text="Github"
+    >
       <GithubIcon />
     </a>
-    <a href="https://vsco.co/zz-rica/gallery" target="_blank" class="link-button mr-2" rel="noopener noreferrer" data-tooltip-text="Photography">
+    <a 
+      href="https://vsco.co/zz-rica/gallery" 
+      target="_blank" 
+      class="link-button mr-2" 
+      rel="noopener noreferrer"
+      data-tooltip-text="Photography"
+    >
       <VSCOIcon />
     </a>
-    <a href="https://dribbble.com/notrica" target="_blank" class="link-button mr-2" rel="noopener noreferrer" data-tooltip-text="Dribbble">
+    <a 
+      href="https://dribbble.com/notrica" 
+      target="_blank" 
+      class="link-button mr-2" 
+      rel="noopener noreferrer"
+      data-tooltip-text="Dribbble"
+    >
       <DribbbleIcon />
     </a>
-    <a href="https://www.twitch.tv/devwithrica/videos?category=1469308723&filter=archives&sort=time" target="_blank" class="link-button" rel="noopener noreferrer" data-tooltip-text="Twitch">
+    <a 
+      href="https://www.twitch.tv/devwithrica/videos?category=1469308723&filter=archives&sort=time" 
+      target="_blank" 
+      class="link-button" 
+      rel="noopener noreferrer"
+      data-tooltip-text="Twitch"
+    >
       <TwitchIcon />
     </a>
   </div>
