--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -5,7 +5,17 @@ const inactive = "text-zinc-600 hover:text-black active:text-zinc-800 focus:text
 ---
 <header class="flex justify-center text-sm sm:text-base mt-1">
   <div class="flex border-2 border-zinc-800 bg-amber-50 drop-shadow-[0px_5px_#000] rounded-full">
-    <a href="/" class={`px-8 py-5 ease rounded-l-full ${page === 'about' ? active : inactive}`}>About</a>
-    <a href="/projects" class={`px-8 py-5 ease rounded-r-full ${page === 'projects' ? active : inactive}`}>Projects</a>
+    <a 
+      href="/" 
+      class={`px-8 py-5 ease rounded-l-full ${page === 'about' ? active : inactive}`}
+    >
+      About
+    </a>
+    <a 
+      href="/projects" 
+      class={`px-8 py-5 ease rounded-r-full ${page === 'projects' ? active : inactive}`}
+    >
+      Projects
+    </a>
   </div>
 </header>
