--- a/src/components/project/Project.astro
+++ b/src/components/project/Project.astro
@@ -8,7 +8,12 @@ const { lazy = true, img_file_name, label, title, description, tools, url, url_t
 ---
 
 <section class="w-full md:w-6/12 mb-12 md:mb-6">
-  <div class="bg-card drop-shadow-[5px_5px_#000] border-2 border-zinc-900 transition-colors p-5 md:mr-4 rounded-md">
+  <div class:list={[
+    "bg-card drop-shadow-[5px_5px_#000] rounded-md",
+    "p-5 md:mr-4",
+    "border-2 border-zinc-900",
+    "transition-colors"
+  ]}>
     <div class="mb-5 bg-[#ececcf] rounded-md">
       <ProjectImage
         img_file_name={img_file_name}
