--- a/src/components/project/ProjectInfo.astro
+++ b/src/components/project/ProjectInfo.astro
@@ -4,7 +4,10 @@ const { label, title, description } = Astro.props
 
 <div>
   {label && (
-    <small class={`block text-sm mb-1 font-semibold uppercase ${label.color}`}>
+    <small class:list={[
+      "block text-sm mb-1 font-semibold uppercase",
+      label.color
+    ]}>
       {label.text}
     </small>
   )}
