--- a/src/components/project/ProjectLink.astro
+++ b/src/components/project/ProjectLink.astro
@@ -9,7 +9,13 @@ const { url, url_text, github_url } = Astro.props
   href={url} 
   target="_blank" 
   rel="nofollow" 
-  class="inline-block font-bold text-white bg-black hover:bg-zinc-800 transition duration-300 rounded-full py-3 px-7"
+  class:list={[
+    "inline-block rounded-full",
+    "py-3 px-7",
+    "font-bold text-white",
+    "bg-black hover:bg-zinc-800",
+    "transition duration-300"
+  ]}
 >
   <span class="flex items-center justify-center">
     <span>{url_text}</span>
@@ -22,7 +28,12 @@ const { url, url_text, github_url } = Astro.props
     <a 
       href={github_url} 
       target="_blank" 
-      class="ml-2 inline-block bg-black hover:bg-zinc-800 transition duration-300 rounded-full py-2 px-3"
+      class:list={[
+        "inline-block rounded-full",
+        "ml-2 py-2 px-3",
+        "bg-black hover:bg-zinc-800",
+        "transition duration-300",
+      ]}
       aria-label="Github repository"
     >
       <GithubIcon color="#fff" />
