refactor: move client projects data to JSON file

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -2,6 +2,8 @@
 import Layout from "../layouts/Layout.astro"
 import NavBar from "../components/NavBar.astro"
 import Project from "../components/project/Project.astro"
+
+import client_projects from "../constants/client_projects.json"
 import personal_projects from "../constants/personal_projects.json"
 ---
 
@@ -33,7 +35,7 @@ import personal_projects from "../constants/personal_projects.json"
         {personal_projects.map((project) => {
           return (
             <Project
-              lazy={project.lazy}
+              lazy={project.lazy || true}
               img_file_name={project.img_file_name}
               label={project.label}
               title={project.title}
@@ -49,68 +51,22 @@ import personal_projects from "../constants/personal_projects.json"
 
       <div class="mx-auto flex flex-row flex-wrap align-center mb-8 md:mb-32">
 				<h2 class="w-full text-3xl sm:text-4xl font-semibold font-clash mb-6 uppercase">Solo projects for clients</h2>
-
-        <Project
-          img_file_name="chef"
-          label={{text: "Front-end Project", color: "text-lime-600"}}
-          title="Chef"
-          description="Responsive landing page for a chrome extension"
-          tools={[
-            {id: 'html', name: 'HTML'},
-            {id: 'css', name: 'CSS'},
-            {id: 'jquery', name: 'jQuery'},
-            {id: 'jekyll', name: 'jekyll'}
-          ]}
-          url="https://usechef.com/"
-          url_text="View project"
-          github_url={null}
-        />
-
-        <Project
-          img_file_name="wenmint"
-          label={{text: "[Offline] Full Stack Project", color: "text-red-600"}}
-          title="Wenmint.io"
-          description="A community to keep track of upcoming NFT launch dates"
-          tools={[
-            {id: 'nuxt', name: 'Nuxt.js'},
-            {id: 'discordapi', name: 'Discord API'},
-            {id: 'twitterapi', name: 'Twitter API'},
-            {id: 'seo', name: 'SEO'},
-          ]}
-          url="https://web.archive.org/web/20221207025634/https://wenmint.io/"
-          url_text="View archived page"
-          github_url={null}
-        />
-
-        <Project
-          img_file_name="bot"
-          label={{text: "[Offline] Bot Project", color: "text-red-600"}}
-          title="Premint Links Discord Bot"
-          description="A bot used by over 300 discord servers that extracts the most recent premint links shared on Twitter."
-          tools={[
-            {id: 'discordapi', name: 'Discord API'},
-            {id: 'twitterapi', name: 'Twitter API'},
-            {id: 'node', name: 'Node.js'},
-          ]}
-          url="https://top.gg/bot/1006311461175443526"
-          url_text="View archived page"
-          github_url={null}
-        />
-
-        <Project
-          img_file_name="cult"
-          label={{text: "[Offline] Full Stack Project", color: "text-red-600"}}
-          title="NFT Referral"
-          description="An alt-resistant referral campaign implemented for an NFT project, attracting 23,000 registrations in just three days."
-          tools={[
-            {id: 'nuxt', name: 'Nuxt.js'},
-            {id: 'strapi', name: 'Strapi'},
-            {id: 'twitterapi', name: 'Twitter OAuth'},
-          ]}
-          url="https://twitter.com/search?q=cultofeth.xyz&src=typed_query&f=live"
-          url_text="View campaign results"
-          github_url={null}
-        />
+        
+        {client_projects.map((project) => {
+          return (
+            <Project
+              lazy={true}
+              img_file_name={project.img_file_name}
+              label={project.label}
+              title={project.title}
+              description={project.description}
+              tools={project.tools}
+              url={project.url}
+              url_text={project.url_text}
+              github_url={project.github_url}
+            />
+          )
+        })}
       </div>
 		</main>
   </div>
