--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,4 +1,8 @@
 ---
+interface Props {
+  page: "about" | "projects"
+}
+
 const { page } = Astro.props
 
 const activeClass = "font-bold text-black active:text-zinc-800 focus:text-zinc-900"
