chore(ts): add types for project props

--- a/src/components/project/Project.astro
+++ b/src/components/project/Project.astro
@@ -3,8 +3,19 @@ import ProjectImage from "./ProjectImage.astro"
 import ProjectInfo from "./ProjectInfo.astro"
 import ProjectLink from "./ProjectLink.astro"
 import ProjectTool from "./ProjectTool.astro"
+import type { ToolType } from "../../types"
 
-const { lazy = true, img_file_name, label, title, description, tools, url, url_text, github_url } = Astro.props
+const { 
+  lazy = true, 
+  img_file_name, 
+  label, 
+  title, 
+  description, 
+  tools, 
+  url, 
+  url_text, 
+  github_url
+} = Astro.props
 ---
 
 <section class="w-full md:w-6/12 mb-12 md:mb-6">
@@ -30,7 +41,7 @@ const { lazy = true, img_file_name, label, title, description, tools, url, url_t
       />
 
       <div class="mt-1 mb-3">
-        {tools.map((tool: {id: String, name: String}, i: Number) => {
+        {tools.map((tool: ToolType, i: number) => {
           return (
             <ProjectTool 
               tool_index={i}
