chore: fix card hover transition

--- a/src/components/project/Project.astro
+++ b/src/components/project/Project.astro
@@ -23,7 +23,7 @@ const {
     "bg-card drop-shadow-[5px_5px_#000] rounded-md",
     "p-5 md:mr-4",
     "border-2 border-zinc-900",
-    "transition-colors"
+    "transition-all"
   ]}>
     <div class="mb-5 bg-[#ececcf] rounded-md">
       <ProjectImage
