--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -72,4 +72,12 @@ const fontshareUrl = "https://api.fontshare.com"
 	.tippy-arrow {
     color: #000;
 	}
+	.bg-card {
+    background: linear-gradient(0deg, #56ff00, #fffbeb 5rem);
+    transition: all ease 300ms;
+  }
+  .bg-card:hover {
+    transform: translate(-2px, -2px);
+    box-shadow: 7px 7px #000;
+  }
 </style>
