feat: replace twitch link with instagram

--- a/src/components/LinkBar.astro
+++ b/src/components/LinkBar.astro
@@ -3,7 +3,7 @@ import LinkedInIcon from "./icons/LinkedInIcon.astro"
 import GithubIcon from "./icons/GithubIcon.astro"
 import VSCOIcon from "./icons/VSCOIcon.astro"
 import DribbbleIcon from "./icons/DribbbleIcon.astro"
-import TwitchIcon from "./icons/TwitchIcon.astro"
+import DigitalArtIcon from "./icons/DigitalArtIcon.astro"
 ---
 
 <div class="flex justify-center align-center">
@@ -45,13 +45,13 @@ import TwitchIcon from "./icons/TwitchIcon.astro"
       <DribbbleIcon />
     </a>
     <a 
-      href="https://www.twitch.tv/devwithrica/videos?category=1469308723&filter=archives&sort=time" 
+      href="https://www.instagram.com/artwithrica/" 
       target="_blank" 
       class="link-button" 
       rel="noopener noreferrer"
-      data-tooltip-text="Twitch"
+      data-tooltip-text="Digital Art"
     >
-      <TwitchIcon />
+      <DigitalArtIcon />
     </a>
   </div>
 </div>
