chore: remove swup id in elements

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import LongStrip from "../components/LongStrip.astro"
 ---
 
 <Layout doIndex={true}>
-  <div id="swup" class="container height-fix text-black">
+  <div class="container height-fix text-black">
 		<div class="height-fix-inner flex">
 			<div class:list={[
 				"hidden bg-black",
