--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -14,7 +14,7 @@ import type { ProjectType } from "../types"
   description="The collection of projects I worked on / I'm working on."
   doIndex={false}
 >
-	<div id="swup" class="transition-fade text-black">
+	<div class="transition-fade text-black">
     <NavBar page="projects" />
 
 		<main class:list={[
