--- a/src/pages/uses.astro
+++ b/src/pages/uses.astro
@@ -8,7 +8,7 @@ import NavBar from "../components/NavBar.astro"
   description="My tech setup :)"
   doIndex={true}
 />
-  <div id="swup" class="transition-fade text-black">
+  <div class="transition-fade text-black">
     <NavBar page="uses" />
 
     <main class:list={[
