feat: add threads icon and link

--- a/src/components/LinkBar.astro
+++ b/src/components/LinkBar.astro
@@ -1,9 +1,9 @@
 ---
 import LinkedInIcon from "./icons/LinkedInIcon.astro"
 import GithubIcon from "./icons/GithubIcon.astro"
-import VSCOIcon from "./icons/VSCOIcon.astro"
 import DribbbleIcon from "./icons/DribbbleIcon.astro"
 import DigitalArtIcon from "./icons/DigitalArtIcon.astro"
+import ThreadsIcon from "./icons/ThreadsIcon.astro"
 ---
 
 <div class="flex justify-center align-center">
@@ -26,15 +26,7 @@ import DigitalArtIcon from "./icons/DigitalArtIcon.astro"
     >
       <GithubIcon />
     </a>
-    <a
-      href="https://vsco.co/zz-rica/gallery"
-      target="_blank"
-      class="link-button mr-2"
-      rel="noopener noreferrer"
-      data-tooltip-text="Photography"
-    >
-      <VSCOIcon />
-    </a>
+
     <a
       href="https://dribbble.com/notrica"
       target="_blank"
@@ -47,11 +39,20 @@ import DigitalArtIcon from "./icons/DigitalArtIcon.astro"
     <a
       href="https://www.instagram.com/artwithrica/"
       target="_blank"
-      class="link-button"
+      class="link-button mr-2"
       rel="noopener noreferrer"
       data-tooltip-text="Digital Art"
     >
       <DigitalArtIcon />
+    </a>
+    <a
+      href="https://www.threads.net/@rica_zz"
+      target="_blank"
+      class="link-button mr-2"
+      rel="noopener noreferrer"
+      data-tooltip-text="Photography"
+    >
+      <ThreadsIcon />
     </a>
   </div>
 </div>
