chore: fix double class names

--- a/src/pages/uses.astro
+++ b/src/pages/uses.astro
@@ -26,7 +26,7 @@ import NavBar from "../components/NavBar.astro"
         </h1>
 
         <aside class="w-full md:w-6/12 mb-6 pr-3">
-          <section class="p-5 bg-card drop-shadow-[5px_5px_#000] rounded-md rounded-md border-2 border-zinc-900">
+          <section class="p-5 bg-card drop-shadow-[5px_5px_#000] rounded-md border-2 border-zinc-900">
             <h2 class="w-full font-semibold font-clash uppercase text-3xl">Desk setup</h2>
 
             <div class="mt-2">
@@ -51,7 +51,7 @@ import NavBar from "../components/NavBar.astro"
             </div>
           </section>
 
-          <section class="mt-5 p-5 bg-card drop-shadow-[5px_5px_#000] rounded-md rounded-md border-2 border-zinc-900">
+          <section class="mt-5 p-5 bg-card drop-shadow-[5px_5px_#000] rounded-md border-2 border-zinc-900">
             <h2 class="w-full font-semibold font-clash uppercase text-3xl">Software</h2>
 
             <div class="mt-2">
@@ -104,7 +104,7 @@ import NavBar from "../components/NavBar.astro"
         </aside>
 
         <aside class="w-full md:w-6/12 mb-6">
-          <section class="p-5 bg-card drop-shadow-[5px_5px_#000] rounded-md rounded-md border-2 border-zinc-900">
+          <section class="p-5 bg-card drop-shadow-[5px_5px_#000] rounded-md border-2 border-zinc-900">
             <h2 class="w-full font-semibold font-clash uppercase text-3xl">Audio setup</h2>
 
             <div class="mt-2">
@@ -134,7 +134,7 @@ import NavBar from "../components/NavBar.astro"
             </div>
           </section>
 
-          <section class="mt-6 p-5 bg-card drop-shadow-[5px_5px_#000] rounded-md rounded-md border-2 border-zinc-900">
+          <section class="mt-6 p-5 bg-card drop-shadow-[5px_5px_#000] rounded-md border-2 border-zinc-900">
             <h2 class="w-full font-semibold font-clash uppercase text-3xl">Browser</h2>
 
             <div class="mt-2">
