--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -3,8 +3,8 @@ import Layout from "../layouts/Layout.astro"
 import NavBar from "../components/NavBar.astro"
 import Project from "../components/project/Project.astro"
 
-import client_projects from "../constants/client_projects.json"
-import personal_projects from "../constants/personal_projects.json"
+import { client_projects } from "../constants/client_projects.ts"
+import { personal_projects } from "../constants/personal_projects.ts"
 
 import type { ProjectType } from "../types"
 ---
