feat: hide projects section

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -47,7 +47,7 @@ import type { ProjectType } from "../types"
         })}
 			</div>
 
-      <div class="mx-auto flex flex-row flex-wrap align-center mb-8 md:mb-32">
+      <div class="hidden mx-auto flex-row flex-wrap align-center mb-8 md:mb-32">
 				<h2 class="w-full text-3xl sm:text-4xl font-semibold font-clash mb-6 uppercase">
           Solo projects for clients
         </h2>
