fix: resolve homepage script on transition

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,6 +51,8 @@ import LongStrip from "../components/LongStrip.astro"
 			</div>
 		</div>
   </div>
+
+	<script src="../scripts/index.js"></script>
 </Layout>
 
 <style>
